--- a/styles.css
+++ b/styles.css
@@ -103,10 +103,10 @@ padding: 25px 5px 6px 5px;
 }
 
 .post-author img, .about-author img {
- width: 100px;
- height: 100px;
+ width: 500px;
+ height: 500px;
  vertical-align: middle;
- border-radius: 50px;
+ border-radius: 50%;
 }
 	
 .post-author {
