--- a/styles.css
+++ b/styles.css
@@ -136,9 +136,12 @@ h1, h2, h3, h4 {
 p {
  line-height: 1.5;
  text-align: justify;
-font-size: 20px;
 }
 
 .post-container:nth-child(even){
 	background-color: #f2f2f2;
 	}
+
+.post-container {
+font-size: 10px;
+}
